--- a/syncfusion-cody/release-notes/v0.1.0.md
+++ b/syncfusion-cody/release-notes/v0.1.0.md
@@ -1,20 +1,20 @@
 ---
 title: Release Notes v1.0.1
-Desciption: Initial release of Cody Agent Mode, introducing autonomous code analysis, editing, and execution features to enhance developer productivity.
-platform: syncfusion-cody
+Desciption: Initial release of Syncfusion code studio Agent Mode, introducing autonomous code analysis, editing, and execution features to enhance developer productivity.
+platform: syncfusion-code-studio
 ---
 
 ## What's New in v0.1.0
 
-- **Chat mode**: Interact with Cody using natural language to get code suggestions, explanations, and assistance in real time.
-- **Agent mode**: Enables Cody to autonomously analyze your codebase, plan and execute changes, and use tools to automate complex development tasks with minimal input.
+- **Chat mode**: Interact with Syncfusion code studio using natural language to get code suggestions, explanations, and assistance in real time.
+- **Agent mode**: Enables Syncfusion code studio to autonomously analyze your codebase, plan and execute changes, and use tools to automate complex development tasks with minimal input.
 - **Edit mode**: Make targeted changes to your codebase with AI assistance, allowing you to review, accept, or modify suggestions before applying them.
 - **Autocomplete**: Get intelligent code completions as you type, speeding up development and reducing errors.
-- **Tool integration**: Seamlessly integrates with your IDE and development tools, providing a unified workflow for searching, editing, and running commands directly from Cody.
+- **Tool integration**: Seamlessly integrates with your IDE and development tools, providing a unified workflow for searching, editing, and running commands directly from Syncfusion code studio.
 - **Reusable prompts**: Create and save custom prompt templates for common tasks, making it easy to reuse instructions and streamline your workflow.
 - **Custom ruels & flow**: Define custom rules and workflows to automate repetitive tasks and enforce coding standards across your projects.
 - **Syncfusion UI Builder**: Quickly generate and customize user interfaces with AI-powered suggestions, streamlining UI development within your projects.
-- **Multi Model**: Switch between different AI models to tailor Cody’s responses and capabilities to your needs.
+- **Multi Model**: Switch between different AI models to tailor Syncfusion code studio’s responses and capabilities to your needs.
 - **Codebase search**: Instantly search your entire codebase to find references, definitions, and relevant files, making navigation and understanding faster.
-- **MCP server integration**: Connect Cody with your Model Context Protocol (MCP) pull data fron anywhere.
+- **MCP server integration**: Connect Syncfusion code studio with your Model Context Protocol (MCP) pull data fron anywhere.
 - **Bug fixes and performance improvements**: Enhanced stability and reliability across all features for a smoother user experience.
