--- a/code-studio/release-notes/v0.3.0.md
+++ b/code-studio/release-notes/v0.3.0.md
@@ -5,25 +5,14 @@ platform: syncfusion-code-studio
 ---
 
 ## What's New in v0.3.0
-- **Context Usage UI in Session Header**:  
-  A new Context Usage UI has been introduced in the session header, providing users with clear insights into the context consumed by each request and across the entire session. This feature helps users monitor and manage their context usage with ease.
-- **Built-in Extensions: DotRush and VSCode Solution Explorer**:  
-  The IDE now auto-installs DotRush and VSCode Solution Explorer extensions on launch, equipping developers with advanced C# development tools, IntelliSense, debugging, profiling features, and a Visual Studio-like solution tree for streamlined .NET project management.
-- **Context Length Optimization**:  
-  Implemented automatic summarization to maintain context usage within set limits throughout the session. When the context length approaches its limit, previous user and assistant conversations are summarized to manage resource consumption efficiently.
-- **Session Spending Warning**:  
-  A warning message is now displayed to users who exceed $5 in a single session, assisting in cost awareness and budget management.
-- **Info Icon in User Settings**:  
-  An info icon has been added to the User Settings options, allowing users to access detailed information about each setting directly from the interface.
-- **Tools Improvements**:  
-  Tools have been updated for greater reliability and flexibility, including the Run Terminal tool, which now enables the "Move to Background" feature only for development commands (with clear tooltips for others), removes unnecessary visual clutter from the terminal output, and executes shell commands more reliably by running them as terminal code. Additional tool enhancements include better handling of multiple file creations, improved accuracy in file and directory listings, more precise searching and file reading, smarter change detection in diffs, and enhanced support for processing specific file ranges and handling malformed input.
-- **Agent Max Request Confirmation**:  
-  User settings now prompt for confirmation to continue or stop streaming after reaching the maximum allowed requests.
-- **Feedback Section**:  
-  A new feedback section is available under the Help menu in the title bar, linking directly to the Syncfusion Code Studio feedback page.
-- **Image and Agent Mode Support**:  
-  Introduced generic image handling and expanded agent mode compatibility for a more versatile workflow.
-- **Streaming Support for GPT-5 and Other Models**:  
-  Streaming is now supported for high-end models, including OpenAI GPT-5, O1, O3 Mini, and O4-Mini.
-- **Bug Fixes and Performance Improvements**:  
-  Enhanced stability and reliability across all features for a smoother user experience.
+- **Context Usage UI in Session Header**: A new Context Usage UI has been introduced in the session header, providing users with clear insights into the context consumed by each request and across the entire session. This feature helps users monitor and manage their context usage with ease.
+- **Built-in Extensions: DotRush and VSCode Solution Explorer**: The IDE now auto-installs DotRush and VSCode Solution Explorer extensions on launch, equipping developers with advanced C# development tools, IntelliSense, debugging, profiling features, and a Visual Studio-like solution tree for streamlined .NET project management.
+- **Context Length Optimization**: Implemented automatic summarization to maintain context usage within set limits throughout the session. When the context length approaches its limit, previous user and assistant conversations are summarized to manage resource consumption efficiently.
+- **Session Spending Warning**: A warning message is now displayed to users who exceed $5 in a single session, assisting in cost awareness and budget management.
+- **Info Icon in User Settings**: An info icon has been added to the User Settings options, allowing users to access detailed information about each setting directly from the interface.
+- **Tools Improvements**: Tools have been updated for greater reliability and flexibility, including the Run Terminal tool, which now enables the "Move to Background" feature only for development commands (with clear tooltips for others), removes unnecessary visual clutter from the terminal output, and executes shell commands more reliably by running them as terminal code. Additional tool enhancements include better handling of multiple file creations, improved accuracy in file and directory listings, more precise searching and file reading, smarter change detection in diffs, and enhanced support for processing specific file ranges and handling malformed input.
+- **Agent Max Request Confirmation**: User settings now prompt for confirmation to continue or stop streaming after reaching the maximum allowed requests.
+- **Feedback Section**: A new feedback section is available under the Help menu in the title bar, linking directly to the Syncfusion Code Studio feedback page.
+- **Image and Agent Mode Support**: Introduced generic image handling and expanded agent mode compatibility for a more versatile workflow.
+- **Streaming Support for GPT-5 and Other Models**: Streaming is now supported for high-end models, including OpenAI GPT-5, O1, O3 Mini, and O4-Mini.
+- **Bug Fixes and Performance Improvements**: Enhanced stability and reliability across all features for a smoother user experience.
