updated new fetures in welcome page and release notes rename

--- a/code-studio/release-notes/v1.0.0.md
+++ b/code-studio/release-notes/v1.0.0.md
@@ -1,10 +1,10 @@
 ---
-title: Release Notes v0.3.0
+title: Release Notes v1.0.0
 Description: Enhanced Syncfusion Code Studio with improved context usage UI, extension management, terminal, and various new features and bug fixes.
 platform: syncfusion-code-studio
 ---
 
-## What's New in v0.3.0
+## What's New in v1.0.0
 - **Enterprise Models**: Signing in connects you to powerful enterprise AI models for advanced code generation, analysis, and developer assistance. For more details please refer [Enterprise models](/code-studio/get-started/Signin)
 <img src="./releasenotes-images/enterprise.png" alt="release notes" >
 
@@ -31,7 +31,7 @@ platform: syncfusion-code-studio
 - **Feedback Section**: A new feedback section is available under the Help menu in the title bar, linking directly to the Syncfusion Code Studio feedback page.
 - **Image and Agent Mode Support**: Introduced generic image handling and expanded agent mode compatibility for a more versatile workflow.
 - **Generic new model support**: Introducing new generic model support in add chat model option in user settings. 
-- **Tools Improvements**: Tools have been updated for greater reliability and flexibility, including the Run Terminal tool, which now enables the "Move to Background" feature only for development commands (with clear tooltips for others), removes unnecessary visual clutter from the terminal output, and executes shell commands more reliably by running them as terminal code. Additional tool enhancements include better handling of multiple file creations, improved accuracy in file and directory listings, more precise searching and file reading, smarter change detection in diffs, and enhanced support for processing specific file ranges and handling malformed input.For more details refer [Tools](/code-studio/reference/configure-properties/Tools).
+- **Tools Improvements**: Tools have been updated for greater reliability and flexibility, including the Run Terminal tool, which now enables the "Move to Background" feature only for development commands (with clear tooltips for others), removes unnecessary visual clutter from the terminal output, and executes shell commands more reliably by running them as terminal code. Additional tool enhancements include better handling of multiple file creations, improved accuracy in file and directory listings, more precise searching and file reading, smarter change detection in diffs, and enhanced support for processing specific file ranges and handling malformed input.For more details refer [Tools](/code-studio/reference/configure-properties/ToolsSupport.md).
 - **Improved indexing performance**: Improved performance issues where local indexing caused the extension UI to lag in larger workspaces. The extension UI now remains responsive during local indexing, even for large projects. 
 - **Error handling**: Improved error handling Api key issues, request errors and server-side errors. 
 - **Improved EACCESS error handling for mcp server installation for mac users**: Improved error handling for cached EACCESS issues during MCP server installation for Mac users. Added informative error messages with direct links to relevant solution documentation. 
