Updated the UI Builder release notes.

--- a/code-studio/release-notes/v1.0.0.md
+++ b/code-studio/release-notes/v1.0.0.md
@@ -5,6 +5,20 @@ platform: syncfusion-code-studio
 ---
 
 ## What's New in v1.0.0
+
+- **UI Builder Improvements**:
+  - **Enhanced UI Builder Mode Support**: The UI Builder has been significantly enhanced with new modes:
+    - **supportedControls Mode**: Now returns all available controls for your target Syncfusion platform.
+    - **Context Mode**: Provides comprehensive metadata including platform prompts, layout plans (JSON), and controls JSON context.
+
+    <img src="./releasenotes-images/ui-builder-modes.png" alt="release notes" >
+
+  - **Expanded Platform Support**: Added support for 10 new platforms including TypeScript, Pure React, Vue, .NET Core, MAUI, Flutter, WinForms, WPF, WinUI, and Java.
+  - **Platform Optimization**: Enhanced prompts and metadata for existing platforms (JavaScript, React, Angular, Blazor).
+  - **User Experience Improvements**: Added warning popup when UI Builder receives more than 15 components in context mode to prevent performance issues.
+
+  <img src="./releasenotes-images/warning-popup-ui-builder.png" alt="release notes" >
+
 - **Enterprise Models**: Signing in connects you to powerful enterprise AI models for advanced code generation, analysis, and developer assistance. For more details please refer [Enterprise models](/code-studio/enterprise-server/dashboard)
 
 <img src="./releasenotes-images/enterprise.png" alt="release notes" >
@@ -45,4 +59,6 @@ platform: syncfusion-code-studio
 - **Improved EACCESS error handling for mcp server installation for mac users**: Improved error handling for cached EACCESS issues during MCP server installation for Mac users. Added informative error messages with direct links to relevant solution documentation. 
 - **Security enhancements**: Enhanced system security by updating the AI system prompt to prevent exposure of internal system prompts and built-in tool information. 
 - **Streaming Support for GPT-5 and Other Models**: Streaming is now supported for high-end models, including OpenAI GPT-5, O1, O3 Mini, and O4-Mini.
-- **Bug Fixes and Performance Improvements**: Enhanced stability and reliability across all features for a smoother user experience.
+- **Bug Fixes and Performance Improvements**:
+  - Resolved UI Builder tool execution problems that were triggered by specific user prompts
+  - Enhanced stability and reliability across all features for a smoother user experience
