Updated the release notes.

--- a/code-studio/release-notes/v1.0.0.md
+++ b/code-studio/release-notes/v1.0.0.md
@@ -6,6 +6,15 @@ platform: syncfusion-code-studio
 
 ## What's New in v1.0.0
 
+- **Code Studio Built for Enterprise**: Confidently scale AI development across your organization with centralized control, security, and visibility. For more details please refer [Enterprise models](/code-studio/enterprise-server/dashboard)
+  - **LLM Connections & Model Management**: Connect to any provider with your own keys (BYO-Key), manage models from one control plane, set access rules, and monitor usage with built-in analytics.
+  - **User & Team Management**: Invite users via SSO, organize them into teams, assign roles, set budgets and quotas, and track detailed usage per user and team.
+  - **Resilient by Design**: Define a fallback order—Code Studio automatically handles retries and failovers to keep development uninterrupted.
+  - **Team & User Budgets**: Set budgets for users and teams, receive alerts on threshold breaches, and view trends to manage costs proactively.
+  - **Analytics & Observability Dashboard**: Monitor token usage, costs, latency, and success rates in real-time with powerful filters and insights by team, user, or model.
+  
+  <img src="./releasenotes-images/enterprise.png" alt="release notes" >
+
 - **UI Builder Improvements**:
   - **Enhanced UI Builder Mode Support**: The UI Builder has been significantly enhanced with new modes:
     - **supportedControls Mode**: Now returns all available controls for your target Syncfusion platform.
@@ -18,10 +27,6 @@ platform: syncfusion-code-studio
   - **User Experience Improvements**: Added warning popup when UI Builder receives more than 15 components in context mode to prevent performance issues.
 
   <img src="./releasenotes-images/warning-popup-ui-builder.png" alt="release notes" >
-
-- **Enterprise Models**: Signing in connects you to powerful enterprise AI models for advanced code generation, analysis, and developer assistance. For more details please refer [Enterprise models](/code-studio/enterprise-server/dashboard)
-
-<img src="./releasenotes-images/enterprise.png" alt="release notes" >
 
 - **MCP Marketplace and Custom servers**: A new MCP Marketplace is now available, providing a centralized platform where users can easily discover, install, and connect MCP servers through an intuitive interface. Explore a wide range of available servers and set them up for use with just one click—installation is fully automated and integrates directly with the Code Studio extension. Additionally, Custom Servers support lets you effortlessly connect any custom MCP server, giving you greater flexibility and control when accessing servers from within the Code Studio extension. For more details refer [MCP Marketplace](/code-studio/reference/configure-properties/mcp/marketplace) and [Customservers](/code-studio/reference/configure-properties/mcp/customservers)
 
