Updated the content.

--- a/code-studio/release-notes/v1.0.0.md
+++ b/code-studio/release-notes/v1.0.0.md
@@ -16,15 +16,15 @@ platform: syncfusion-code-studio
   <img src="./releasenotes-images/enterprise.png" alt="release notes" >
 
 - **UI Builder Improvements**:
-  - **Enhanced UI Builder Mode Support**: The UI Builder has been significantly enhanced with new modes:
-    - **supportedControls Mode**: Now returns all available controls for your target Syncfusion platform.
+  - **UI Builder Mode Support**: The UI Builder has been significantly enhanced with new modes:
+    - **supportedControls Mode**: Returns all available controls for your target Syncfusion platform.
     - **Context Mode**: Provides comprehensive metadata including platform prompts, layout plans (JSON), and controls JSON context.
 
     <img src="./releasenotes-images/ui-builder-modes.png" alt="release notes" >
 
   - **Expanded Platform Support**: Added support for 10 new platforms including TypeScript, Pure React, Vue, .NET Core, MAUI, Flutter, WinForms, WPF, WinUI, and Java.
   - **Platform Optimization**: Enhanced prompts and metadata for existing platforms (JavaScript, React, Angular, Blazor).
-  - **User Experience Improvements**: Added warning popup when UI Builder receives more than 15 components in context mode to prevent performance issues.
+  - **User Experience Improvements**: Added a warning popup to prevent performance issues when UI Builder receives more than 15 components in context mode.
 
   <img src="./releasenotes-images/warning-popup-ui-builder.png" alt="release notes" >
 
