Updated the technical content review correction in the release notes.

--- a/code-studio/release-notes/v1.0.0.md
+++ b/code-studio/release-notes/v1.0.0.md
@@ -6,64 +6,64 @@ platform: syncfusion-code-studio
 
 ## What's New in v1.0.0
 
-- **Code Studio Built for Enterprise**: Confidently scale AI development across your organization with centralized control, security, and visibility. For more details please refer [Enterprise Server](/code-studio/enterprise-server/getting-started)
-  - **LLM Connections & Model Management**: Connect to any provider with your own keys (BYO-Key), manage models from one control plane, set access rules, and monitor usage with built-in analytics.
-  - **User & Team Management**: Invite users via SSO, organize them into teams, assign roles, set budgets and quotas, and track detailed usage per user and team.
-  - **Resilient by Design**: Define a fallback order—Code Studio automatically handles retries and failovers to keep development uninterrupted.
-  - **Team & User Budgets**: Set budgets for users and teams, receive alerts on threshold breaches, and view trends to manage costs proactively.
-  - **Analytics & Observability Dashboard**: Monitor token usage, costs, latency, and success rates in real-time with powerful filters and insights by team, user, or model.
+- **Code Studio built for enterprise:** Confidently scale AI development across your organization with centralized control, security, and visibility. For more details, please refer to our documentation on [enterprise server](/code-studio/enterprise-server/getting-started).
+  - **LLM connections & model management:** Connect to any provider with your own keys (BYO-key), manage models from one control plane, set access rules, and monitor usage with built-in analytics.
+  - **User & team management:** Invite users via SSO, organize them into teams, assign roles, set budgets and quotas, and track detailed usage per user and team.
+  - **Resilient by design**: Define a fallback order, and Code Studio will automatically handle retries and failovers to keep development uninterrupted.
+  - **Team & user budgets:** Set budgets for users and teams, receive alerts on threshold breaches, and view trends to manage costs proactively.
+  - **Analytics & observability dashboard:** Monitor token usage, costs, latency, and success rates in real-time with powerful filters and insights by team, user, or model.
   
   <img src="./releasenotes-images/enterprise.png" alt="release notes" >
 
-- **UI Builder Improvements**:
-  - **UI Builder Mode Support**: The UI Builder has been significantly enhanced with new modes:
-    - **supportedControls Mode**: Returns all available controls for your target Syncfusion platform.
-    - **Context Mode**: Provides comprehensive metadata including platform prompts, layout plans (JSON), and controls JSON context.
+- **UI Builder improvements**
+  - **UI Builder mode support:** The UI Builder has been significantly enhanced with new modes:
+    - **supportedControls mode:** Returns all available controls for your target Syncfusion platform.
+    - **Context mode:** Provides comprehensive metadata, including platform prompts and layout plans (JSON), and controls JSON context.
 
     <img src="./releasenotes-images/ui-builder-modes.png" alt="release notes" >
 
-  - **Expanded Platform Support**: Added support for 10 new platforms including TypeScript, Pure React, Vue, .NET Core, MAUI, Flutter, WinForms, WPF, WinUI, and Java.
-  - **Platform Optimization**: Enhanced prompts and metadata for existing platforms (JavaScript, React, Angular, Blazor).
-  - **User Experience Improvements**: Added a warning popup to prevent performance issues when UI Builder receives more than 15 components in context mode.
+  - **Expanded platform support:** Added support for 10 new platforms, including TypeScript, Pure React, Vue, .NET Core, .NET MAUI, Flutter, WinForms, WPF, WinUI, and Java.
+  - **Platform optimization:** Enhanced prompts and metadata for existing platforms (JavaScript, React, Angular, and Blazor).
+  - **User experience improvements:** Added a warning pop-up window when the UI Builder receives more than 15 components in context mode to prevent performance issues.
 
   <img src="./releasenotes-images/warning-popup-ui-builder.png" alt="release notes" >
 
-- **MCP Marketplace and Custom servers**: A new MCP Marketplace is now available, providing a centralized platform where users can easily discover, install, and connect MCP servers through an intuitive interface. Explore a wide range of available servers and set them up for use with just one click—installation is fully automated and integrates directly with the Code Studio extension. Additionally, Custom Servers support lets you effortlessly connect any custom MCP server, giving you greater flexibility and control when accessing servers from within the Code Studio extension. For more details refer [MCP Marketplace](/code-studio/reference/configure-properties/mcp/marketplace) and [Customservers](/code-studio/reference/configure-properties/mcp/customservers)
+- **MCP marketplace and custom servers:** A new MCP marketplace is now available, providing a centralized platform where users can easily discover, install, and connect MCP servers through an intuitive interface. Explore a wide range of available servers and set them up with just one click. Installation is fully automated and integrates directly with the Code Studio extension. Custom server support lets you effortlessly connect any custom MCP server, giving you greater flexibility and control when accessing servers within the Code Studio extension. For more details, refer to our documentation on the [MCP marketplace](/code-studio/reference/configure-properties/mcp/marketplace) and [custom servers](/code-studio/reference/configure-properties/mcp/customservers).
 
 <img src="./releasenotes-images/MCPmarketplace.png" alt="release notes" >
 
 <img src="./releasenotes-images/Customserver1.png" alt="release notes" >
 
-- **Context Usage UI in Session Header**: A new Context Usage UI has been introduced in the session header, providing users with clear insights into the context consumed by each request and across the entire session. This feature helps users monitor and manage their context usage with ease.
+- **Context usage UI in session header:** A new context usage UI has been introduced in the session header, providing users with clear insights into the context consumed by each request and across the entire session. This feature helps users monitor and manage their context usage with ease.
 
 <img src="./releasenotes-images/contextusage.png" alt="release notes" >
 
-- **Built-in Extensions: DotRush and VSCode Solution Explorer**: The IDE now auto-installs DotRush and VSCode Solution Explorer extensions on launch, equipping developers with advanced C# development tools, IntelliSense, debugging, profiling features, and a Visual Studio-like solution tree for streamlined .NET project management.
+- **Built-in DotRush and VSCode Solution Explorer extensions:** The IDE now automatically installs DotRush and VSCode Solution Explorer extensions on launch, equipping developers with advanced C# development tools, IntelliSense, debugging, profiling features, and a solution tree for streamlined .NET project management, similar to Visual Studio.
 
 <img src="./releasenotes-images/extension.png" alt="release notes" >
 
-- **Agent Max Request Confirmation**: User settings now prompt for confirmation to continue or stop streaming after reaching the maximum allowed requests.For more details please refer [User settings](/code-studio/reference/configure-properties/usersettings).
+- **Agent max request confirmation:** User settings now request confirmation to continue or stop streaming after reaching the maximum allowed requests.For more details, please refer to our documentation on [user settings](/code-studio/reference/configure-properties/usersettings).
 
 <img src="./releasenotes-images/agentmaxrequest.png" alt="release notes" >
 
-- **Info Icon in User Settings**: An info icon has been added to the User Settings options, allowing users to access detailed information about each setting directly from the interface.For more details please refer [User settings](/code-studio/reference/configure-properties/usersettings).
+- **Info icon in user settings:** An info icon has been added to the user settings options, allowing users to access detailed information about each setting directly from the interface.For more details, please refer to our documentation on [user settings](/code-studio/reference/configure-properties/usersettings).
 
 <img src="./releasenotes-images/infoicon.png" alt="release notes" >
 
-- **Context Length Optimization**: Implemented automatic summarization to maintain context usage within set limits throughout the session. When the context length approaches its limit, previous user and assistant conversations are summarized to manage resource consumption efficiently.For more details please refer [Summarization](/code-studio/features/summarize)
+- **Context length optimization:** Implemented automatic summarization to maintain context usage within set limits throughout the session. When the context length approaches its limit, previous user and assistant conversations are summarized to manage resource consumption efficiently.For more details, please refer to our documentation on [summarization](/code-studio/features/summarize).
 
 <img src="./releasenotes-images/summarization.png" alt="release notes" >
 
-- **Session Spending Warning**: A warning message is now displayed to users who exceed $5 in a single session, assisting in cost awareness and budget management.
-- **Feedback Section**: A new feedback section is available under the Help menu in the title bar, linking directly to the Syncfusion Code Studio feedback page.
-- **Image and Agent Mode Support**: Introduced generic image handling and expanded agent mode compatibility for a more versatile workflow.
-- **Generic new model support**: Introducing new generic model support in add chat model option in user settings. 
-- **Tools Improvements**: Tools have been updated for greater reliability and flexibility, including the Run Terminal tool, which now enables the "Move to Background" feature only for development commands (with clear tooltips for others), removes unnecessary visual clutter from the terminal output, and executes shell commands more reliably by running them as terminal code. Additional tool enhancements include better handling of multiple file creations, improved accuracy in file and directory listings, more precise searching and file reading, smarter change detection in diffs, and enhanced support for processing specific file ranges and handling malformed input.For more details refer [Tools](/code-studio/reference/configure-properties/toolssupport).
-- **Improved indexing performance**: Improved performance issues where local indexing caused the extension UI to lag in larger workspaces. The extension UI now remains responsive during local indexing, even for large projects. 
-- **Error handling**: Improved error handling Api key issues, request errors and server-side errors. 
-- **Improved EACCESS error handling for mcp server installation for mac users**: Improved error handling for cached EACCESS issues during MCP server installation for Mac users. Added informative error messages with direct links to relevant solution documentation. 
-- **Security enhancements**: Enhanced system security by updating the AI system prompt to prevent exposure of internal system prompts and built-in tool information. 
-- **Streaming Support for GPT-5 and Other Models**: Streaming is now supported for high-end models, including OpenAI GPT-5, O1, O3 Mini, and O4-Mini.
-- **Bug Fixes and Performance Improvements**:
-  - Resolved UI Builder tool execution problems that were triggered by specific user prompts
-  - Enhanced stability and reliability across all features for a smoother user experience
+- **Session spending warning:** A warning message is now displayed to users who exceed $5 in a single session, assisting in cost awareness and budget management.
+- **Feedback section:** A new feedback section is available under the help menu in the title bar, linking directly to the Syncfusion Code Studio feedback page.
+- **Image and agent mode support:** Introduced generic image handling and expanded agent mode compatibility for a more versatile workflow.
+- **Generic new model support:** Introduced a new generic model support in the add chat model option in the user settings. 
+- **Tools improvements:** Tools have been updated for greater reliability and flexibility, including the run terminal tool, which now enables the move to background feature only for development commands (with clear tooltips for others), removes unnecessary visual clutter from the terminal output, and executes shell commands more reliably by running them as terminal code. Additional tool enhancements include better handling of multiple file creations, improved accuracy in file and directory listings, more precise searching and file reading, smarter change detection in diffs, and enhanced support for processing specific file ranges and handling malformed input. For more details, refer to our documentation on [tools](/code-studio/reference/configure-properties/toolssupport).
+- **Improved indexing performance:** Improved performance issues where local indexing caused the extension UI to lag in larger workspaces. The extension UI now remains responsive during local indexing, even for large projects. 
+- **Error handling:** Improved error handling API key issues, request errors and server-side errors. 
+- **Improved EACCESS error handling for MCP server installation for Mac users:** Improved error handling for cached EACCESS issues during MCP server installation for Mac users. Added informative error messages with direct links to relevant solution documentation. 
+- **Security enhancements:** Enhanced system security by updating the AI system prompt to prevent the exposure of internal system prompts and built-in tool information. 
+- **Streaming support for GPT-5 and other models:** Streaming is now supported for high-end models, including OpenAI GPT-5, O1, O3 Mini, and O4-Mini.
+- **Bug fixes and performance improvements:**
+  - Resolved UI Builder tool execution problems triggered by specific user prompts.
+  - Enhanced stability and reliability across all features for a smoother user experience.
