highligting key highlights

--- a/code-studio/release-notes/v1.0.1.md
+++ b/code-studio/release-notes/v1.0.1.md
@@ -27,7 +27,7 @@ We've introduced new pricing tiers in Code Studio to provide flexibility for dif
 ## Credits Management
 We've added a new Credits option in Code Studio to help you easily manage your usage balance and top up credits directly from your account.
 
-Key highlights:
+**Key highlights**:
 - View your remaining credits balance in real time.  
 - Add credits instantly with preset options ($50, $100, $500) or enter a custom amount.  
 - Payment history section to track all your past transactions and credit top-ups.  
