removed features changes

--- a/code-studio/release-notes/v1.0.1.md
+++ b/code-studio/release-notes/v1.0.1.md
@@ -47,3 +47,6 @@ These updates make Code Studio's AI model configuration more flexible, consisten
 ## Bug fixes: 
 ### Azure Provider Deployment Issue:
 For Azure Open AI models, the deployment value was not being added to the config file, causing the model's name to be used as the default deployment value. This has been resolved. Now, when a user specifies a deployment value, it is correctly added to the config file and used as the deployment value.
+
+## Removed Features
+The Enhanced Prompt and Automatic Memory features have been removed to simplify the user experience and improve overall performance.
