image changes added

--- a/code-studio/release-notes/v1.0.1.md
+++ b/code-studio/release-notes/v1.0.1.md
@@ -43,12 +43,12 @@ This update makes it easier to monitor your credits and maintain uninterrupted a
 ### Modes Option in Add Model:
 Choose operation modes (Chat, Edit, Apply, Autocomplete) when adding a model to specify where it will be used in the IDE.  
 
-<img src="./releasenotes-images/modeaddmodel.png" alt="release notes" >
+<img src="./releasenotes-images/modeaddmodel.gif" alt="release notes" >
 
 ### Default Model Settings:
 Configure and manage default models for each operation type — Chat, Edit, Apply, and Autocomplete — under the new Manage Default Settings dialog.  
 
-<img src="./releasenotes-images/defaultmodel.png" alt="release notes" >
+<img src="./releasenotes-images/defaultmodel.gif" alt="release notes" >
 
 These updates make Code Studio's AI model configuration more flexible, consistent, and tailored to your workflow.
 
