title format changes

--- a/code-studio/release-notes/v1.0.2.md
+++ b/code-studio/release-notes/v1.0.2.md
@@ -5,11 +5,11 @@ platform: syncfusion-code-studio
 ---
 
 
-## What's New in v1.0.2
+# What's New in v1.0.2
 
 ## Breaking Changes
  
-## Credit Token Usage API Update
+### Credit Token Usage API Update
 - We have refined the Credit Token Usage API to prevent excessive or looping API calls that previously caused unexpected server load.
  
 ## Bug Fixes
