Added the Changes of missing Header for Release Notes md file

--- a/code-studio/release-notes/v2.0.0.md
+++ b/code-studio/release-notes/v2.0.0.md
@@ -1,3 +1,9 @@
+---
+title: Release Notes v2.0.0
+Description: Code Studio with an intuitive UI and smarter AI-powered workflows. Packed with powerful features designed to help you code faster and with more clarity.
+platform: syncfusion-code-studio
+---
+
 # What's New in v2.0.0
 We've completely revamped Code Studio with an intuitive UI and smarter AI-powered workflows. Packed with powerful features designed to help you code faster and with more clarity.
 
