Added the changes of review suggestions

--- a/code-studio/release-notes/v2.0.0.md
+++ b/code-studio/release-notes/v2.0.0.md
@@ -11,7 +11,7 @@ We've completely revamped Code Studio with an intuitive UI and smarter AI-powere
 ### Migration Update
 - **Authentication Reset:** After the auto-update to v2.0.0, existing authenticated accounts will be logged out due to session expiration. Reauthentication is required to continue using Code Studio Chat.
 - **Conversation History:** Existing conversation sessions from previous versions are not accessible after migration.
-- **Configuration Files:** Workspace rules, prompt files, and previously installed MCP servers from prior versions are not accessible.
+- **Configuration Files:** Workspace rules, Agent rules files, prompt files, and previously installed MCP servers from prior versions are not accessible.
 - **Session Tracking:** Session usage tracking is not currently displayed in this version.
 
 ### Model Configuration Changes
